<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.SignupActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupNameBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_fifty_dp"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginRight="@dimen/thirty_dp">

        <EditText
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupMobileBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupNameBlock"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginRight="@dimen/thirty_dp">

        <EditText
            android:id="@+id/signupMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:gravity="center"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupEmailBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupMobileBlock"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginRight="@dimen/thirty_dp">

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:gravity="center"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupPasswordBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupEmailBlock"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:gravity="center"

             />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@id/signupPasswordBlock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/background_shape"
        />

    <include layout="@layout/fragment_social_signup"/>

</RelativeLayout>